updated demo app id

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             window.OneSignalDeferred = window.OneSignalDeferred || [];
             OneSignalDeferred.push(async function(OneSignal) {
                 await OneSignal.init({
-                appId: "d01952d7-5efd-4dbf-89c7-8d7606ab14b0",
+                appId: "07320ae5-fe54-45cf-8d08-0868ba22acbf"
                 });
             });
     </script>
